[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibevoice-api"
version = "0.0.1"
authors = [
  { name="vibevoice team", email="vibepod@microsoft.com" },
]
description = "A model for speech generation with an AR + diffusion architecture."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "accelerate==1.6.0",
    "transformers==4.51.3",
    "vibevoice @ git+https://github.com/vibevoice-community/VibeVoice",
    "datasets==3.5.0", # avoid issues with torchcodec
    "peft", # for finetuning
    "llvmlite>=0.40.0",
    "numba>=0.57.0",
    "diffusers",
    "tqdm",
    "numpy",
    "scipy",
    "librosa",
    "ml-collections",
    "absl-py",
    "gradio",
    "av",
    "aiortc",
    "prometheus_client",
    "pytorch-triton-rocm",
]

[tool.uv.sources]
torch = { index = "rocm" }
pytorch-triton-rocm = { index = "rocm" }

[[tool.uv.index]]
name = "rocm"
#url = "https://download.pytorch.org/whl/rocm6.4"
url = "https://download.pytorch.org/whl/nightly/rocm7.0"
explicit = true

[project.urls]
"Homepage" = "https://github.com/vibevoice-community/VibeVoice-API"
"Bug Tracker" = "https://github.com/vibevoice-community/VibeVoice-API/issues"

[tool.setuptools.packages.find]
where = ["."]
